==> lab85-ru/terraelectronica_boards/TE-LPC4088LCD5.6/Demo_prj/IAR-LPC4088/common/modules/drv_touch_scr.c <==
#include "LPC407x_8x.h"
#include "board.h"
#include "drv_touch_scr.h"
#include "assert.h"
#define LEFT_UP_X      80 * TS_SAMPLES * 2
#define RIGHT_UP_X    945 * TS_SAMPLES * 2
#define LEFT_UP_Y     192 * TS_SAMPLES * 2
#define RIGHT_UP_Y    818 * TS_SAMPLES * 2

void ADC_IRQHandler (void)
{
uint32_t Data;
  LPC_ADC->CR &= ~(7<<24);
  Data = (LPC_ADC->GDR & (0x0000FFF0))>>6;  /*10 - bit result*/
  
  switch(State)
  {
  case TS_X1_MEASURE:
    Y_temp += Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_X2_SETUP_DLY;
      // Y2 = 0, Y1 = 1;
      TS_Y2_FCLR = TS_Y2_MASK;
      TS_Y1_FSET = TS_Y1_MASK;
      // Init setup delay
      LPC_TIM1->MR0 = TS_SETUP_DLY;
      LPC_TIM1->TCR = 1;
    }
    else
    {
      LPC_ADC->CR |= (1<<24);
    }
    break;
  case TS_X2_MEASURE:
    Y_temp += 1023UL - Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_Y1_SETUP_DLY;

      // X1 = 0, X2 = 1;
      TS_X1_FCLR  = TS_X1_MASK;
      TS_X2_FSET  = TS_X2_MASK;
      TS_X1_FDIR |= TS_X1_MASK;
      TS_X2_FDIR |= TS_X2_MASK;
      TS_X1_IOCON   = 0x1A0;

      // Y1 - ADC Ch0, Y2 input
      TS_Y1_FDIR &= ~TS_Y1_MASK;
      TS_Y2_FDIR &= ~TS_Y2_MASK;
      TS_Y1_IOCON   = 0x101;            // assign to ADC0 Ch0
      LPC_ADC->CR  &= ~(0xFF<<0);       
      LPC_ADC->CR  |= (1<<0);          // select Ch0

      // Init setup delay
      LPC_TIM1->MR0 = TS_SETUP_DLY;
      LPC_TIM1->TCR = 1;
    }
    else
    {
      LPC_ADC->CR |= (1<<24);
    }
    break;
  case TS_Y1_MEASURE:
    X_temp += 1023UL - Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_Y2_SETUP_DLY;
      // X2 = 0, X1 = 1;
      TS_X2_FCLR = TS_X2_MASK;
      TS_X1_FSET = TS_X1_MASK;
      // Init setup delay
      LPC_TIM1->MR0 = TS_SETUP_DLY;
      LPC_TIM1->TCR = 1;
    }
    else
    {
      LPC_ADC->CR |= (1<<24);
    }
    break;
  case TS_Y2_MEASURE:
    X_temp += Data;
    if(++Samples >= TS_SAMPLES)
    {
      State = TS_INTR_SETUP_DLY;

      // Y1 = 1, Y2 = 1;
      TS_Y1_FSET  = TS_Y1_MASK;
      TS_Y2_FSET  = TS_Y2_MASK;
      TS_Y1_FDIR |= TS_Y1_MASK;
      TS_Y2_FDIR |= TS_Y2_MASK;
      TS_Y1_IOCON   = 0x1A0;

      // X1 - ADC Ch1, X2 input with pull down
      TS_X1_FDIR &= ~TS_X1_MASK;
      TS_X2_FDIR &= ~TS_X2_MASK;
      TS_X1_IOCON   = 0x101;          // assign to ADC0 Ch1
      TS_X2_IOCON  = 0x28;            // enable pull-down
      LPC_ADC->CR  &= ~(0xFF<<0);       
      LPC_ADC->CR  |= (1<<1);          // select Ch1

      // Init setup delay
      LPC_TIM1->MR0 = TS_SAMPLE_DLY;
      LPC_TIM1->TCR = 1;
      Touch_temp = TRUE;
    }
    else
    {
      LPC_ADC->CR |= (1<<24);
    }
    break;
  default:
    assert(0);
  }
  /*Data synchronization*/
  __DSB();
}

void TouchScrInit (void)
{
  /* Init variables */
  Touch_temp = Touch = FALSE;
  X = Y = 0;
  State = TS_INTR_SETUP_DLY;

  /* Init GPIOs */
  
  TS_X1_IOCON   = 0x101;  /* ADC0 Ch1 disable pulls */
  TS_X2_IOCON   = 0x28;   /* general IO enable pull-down */

  TS_Y1_IOCON   = 0x1A0;   /* general IO disable pulls */
  TS_Y2_IOCON   = 0x20;    /* general IO disable pulls */

  TS_X1_FDIR &= ~TS_X1_MASK;
  TS_X2_FDIR &= ~TS_X2_MASK;
  TS_Y1_FDIR |=  TS_Y1_MASK;
  TS_Y2_FDIR |=  TS_Y2_MASK;

  TS_Y1_FSET  =  TS_Y1_MASK;
  TS_Y2_FSET  =  TS_Y2_MASK;

  /* Init Port interrupt */
  TS_X2_INTR_R  &= ~TS_X2_MASK;   /* disable X2 rising edge interrupt */
  TS_X2_INTR_CLR =  TS_X2_MASK;
  NVIC_EnableIRQ(GPIO_IRQn);

  /* Init ADC */
  LPC_SC->PCONP |= (1<<12);                               /* Enable ADC clocks */
  LPC_ADC->CR = (1<<1) |                                  /* Channel 1 */
                (((PeripheralClock/500000) & 0xFF)<<8) |  /* Set Clock divider*/
                (0<<16)|                                  /* Disable burst*/
                (1<<21)|                                  /* A/D converter is operational */
                (0<<24);                                  /* No Start */
    
  // clear all pending interrupts
  while(LPC_ADC->STAT & (1<<16))
  {
    volatile uint32_t Dummy = LPC_ADC->GDR;
  }

  
  LPC_ADC->INTEN = (1<<8);      /* Enable global interrupt*/
  NVIC_EnableIRQ(ADC_IRQn);

  /* Init delay timer */
  LPC_SC->PCONP |= (1<<2);      /* Enable TIM1 clocks */
  LPC_TIM1->TCR = (1<<1);       /* counting  disable, set reset */
  LPC_TIM1->TCR = 0;            /* release reset */
  LPC_TIM1->CTCR = 0;           /* Timer Mode: every rising PCLK edge */
  LPC_TIM1->MCR = (1<<0) |      /* Enable Interrupt on MR0*/
                  (1<<1) |      /* Enable reset on MR0 */
                  (1<<2) ;      /* Enable stop on MR0 */
  /*set timer 1 period*/
  LPC_TIM1->PR = (PeripheralClock/ 1000000) - 1;
  LPC_TIM1->MR0 = TS_SETUP_DLY;

  LPC_TIM1->IR = (1<<0);  /* clear pending MR0INT*/
  /*Enable NVIC TMR1 Interrupt*/
  NVIC_EnableIRQ(TIMER1_IRQn);
  LPC_TIM1->TCR = 1;    /* start timer 1 */
}
