==> iarsystems/ewarm-st-example-projects/STM32F4xx/IAR-STM32F429II-SK/TouchScreen/modules/drv_touch_scr.c <==
#include <assert.h>
#include <stdint.h>
#include "drv_touch_scr.h"
#include "drv_glcd.h"
#include "iar_stm32f429ii_sk.h"
#define LEFT_UP_X      77 * TS_SAMPLES * 2
#define RIGHT_UP_X    952 * TS_SAMPLES * 2
#define LEFT_UP_Y     131 * TS_SAMPLES * 2
#define RIGHT_UP_Y    883 * TS_SAMPLES * 2

void ADC_IRQHandler(void)
{
GPIO_InitTypeDef   GPIO_InitStructure;
uint32_t Data;

  ADC_ClearITPendingBit(ADC1, ADC_IT_EOC);
  Data = ADC_GetConversionValue(ADC1);

  switch(State)
  {
  case TS_X1_MEASURE:
    Y_temp += Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_X2_SETUP_DLY;
      /* Y2 = 0, Y1 = 1; */
      GPIO_SetBits(TS_Y1_PORT,TS_Y1_PIN);
      GPIO_ResetBits(TS_Y2_PORT,TS_Y2_PIN);
      /* Init setup delay */
      TIM_SetCompare1(TIM5, ((RCC_Clocks.PCLK1_Frequency / 1)/1000000ul) * TS_SETUP_DLY);
      TIM_SetCounter(TIM5, 0);
      TIM_Cmd(TIM5, ENABLE);
    }
    else
    {
      ADC_SoftwareStartConv(ADC1);
    }
    break;

  case TS_X2_MEASURE:
    Y_temp += 1023UL - Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_Y1_SETUP_DLY;

      /* X1 = 0, X2 = 1, no pulls */
      GPIO_InitStructure.GPIO_Pin = TS_X2_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_X2_PORT, &GPIO_InitStructure);

      GPIO_InitStructure.GPIO_Pin = TS_X1_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_X1_PORT, &GPIO_InitStructure);

      GPIO_ResetBits(TS_X1_PORT,TS_X1_PIN);
      GPIO_SetBits(TS_X2_PORT,TS_X2_PIN);

      /* Y2 - ADC1, Y1 - input */
      GPIO_InitStructure.GPIO_Pin = TS_Y1_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_Y1_PORT, &GPIO_InitStructure);

      GPIO_InitStructure.GPIO_Pin = TS_Y2_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_Y2_PORT, &GPIO_InitStructure);

      /* ADC1 regular channel1 configuration */
      ADC_RegularChannelConfig(ADC1, TS_Y2_CHANNEL, 1, ADC_SampleTime_56Cycles);

      /* Clear pending interrupt */
      ADC_ClearITPendingBit(ADC1, ADC_IT_EOC);

      /* Init setup delay */
      TIM_SetCompare1(TIM5, ((RCC_Clocks.PCLK1_Frequency / 1)/1000000ul) * TS_SETUP_DLY);
      TIM_SetCounter(TIM5, 0);
      TIM_Cmd(TIM5, ENABLE);
    }
    else
    {
      ADC_SoftwareStartConv(ADC1);
    }
    break;

  case TS_Y1_MEASURE:
    X_temp += 1023UL - Data;
    if(++Samples >= TS_SAMPLES)
    {
      Samples = 0;
      State = TS_Y2_SETUP_DLY;
      /* X2 = 0, X1 = 1 */
      GPIO_SetBits(TS_X1_PORT,TS_X1_PIN);
      GPIO_ResetBits(TS_X2_PORT,TS_X2_PIN);
      /* Init setup delay */
      TIM_SetCompare1(TIM5, ((RCC_Clocks.PCLK1_Frequency / 1)/1000000ul) * TS_SETUP_DLY);
      TIM_SetCounter(TIM5, 0);
      TIM_Cmd(TIM5, ENABLE);
    }
    else
    {
      ADC_SoftwareStartConv(ADC1);
    }
    break;

  case TS_Y2_MEASURE:
    X_temp += Data;

    if(++Samples >= TS_SAMPLES)
    {
      State = TS_INTR_SETUP_DLY;

      /* Y1 = 1, Y2 = 1 */
      GPIO_InitStructure.GPIO_Pin = TS_Y1_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_Y1_PORT, &GPIO_InitStructure);
      GPIO_SetBits(TS_Y1_PORT,TS_Y1_PIN);

      GPIO_InitStructure.GPIO_Pin = TS_Y2_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_Y2_PORT, &GPIO_InitStructure);
      GPIO_SetBits(TS_Y2_PORT,TS_Y2_PIN);

      /* X2 - ADC, X1 input with pull down */
      GPIO_InitStructure.GPIO_Pin = TS_X1_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
      GPIO_Init(TS_X1_PORT, &GPIO_InitStructure);

      GPIO_InitStructure.GPIO_Pin = TS_X2_PIN;
      GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
      GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
      GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
      GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
      GPIO_Init(TS_X2_PORT, &GPIO_InitStructure);

      /* ADC1 regular channel0 configuration */
      ADC_RegularChannelConfig(ADC1, TS_X2_CHANNEL, 1, ADC_SampleTime_56Cycles);

      /* Clear pending interrupt */
      ADC_ClearITPendingBit(ADC1, ADC_IT_EOC);

      /* Init setup delay */
      TIM_SetCompare1(TIM5, ((RCC_Clocks.PCLK1_Frequency / 1)/1000000ul) * TS_SETUP_DLY);
      TIM_SetCounter(TIM5, 0);
      TIM_Cmd(TIM5, ENABLE);
      Touch_temp = TRUE;
    }
    else
    {
      ADC_SoftwareStartConv(ADC1);
    }
    break;
  default:
    assert(0);
  }
}

void TouchScrInit(void)
{
ADC_InitTypeDef         ADC_InitStructure;
ADC_CommonInitTypeDef   ADC_CommonInitStruct;
GPIO_InitTypeDef        GPIO_InitStructure;
NVIC_InitTypeDef        NVIC_InitStructure;
EXTI_InitTypeDef        EXTI_InitStructure;
TIM_TypeDef             TIM_Struct;
TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
TIM_OCInitTypeDef       TIM_OCInitStructure;

  /* Disable ADC, TIM5 and EXTI9_5 interrupts if any enabled */
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  NVIC_InitStructure.NVIC_IRQChannel = ADC_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;
  NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
  NVIC_Init(&NVIC_InitStructure);

  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  NVIC_InitStructure.NVIC_IRQChannel = TIM5_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;
  NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
  NVIC_Init(&NVIC_InitStructure);

  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;
  NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
  NVIC_Init(&NVIC_InitStructure);

  /* Init variables */
  Touch_temp = Touch = FALSE;
  X = Y = 0;
  State = TS_INTR_SETUP_DLY;

  /* Init GPIOs */
  RCC_AHB1PeriphClockCmd(TS_X1_CLK, ENABLE);
  RCC_AHB1PeriphClockCmd(TS_X2_CLK, ENABLE);
  RCC_AHB1PeriphClockCmd(TS_Y1_CLK, ENABLE);
  RCC_AHB1PeriphClockCmd(TS_Y2_CLK, ENABLE);

  /* Y1 = 1 */
  GPIO_InitStructure.GPIO_Pin = TS_Y1_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL ;
  GPIO_Init(TS_Y1_PORT, &GPIO_InitStructure);
  GPIO_SetBits(TS_Y1_PORT,TS_Y1_PIN);

  /* Y2 = 1 */
  GPIO_InitStructure.GPIO_Pin = TS_Y2_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL ;
  GPIO_Init(TS_Y2_PORT, &GPIO_InitStructure);
  GPIO_SetBits(TS_Y2_PORT,TS_Y2_PIN);

  /* X1 - IN - Pull Down */
  GPIO_InitStructure.GPIO_Pin = TS_X1_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
  GPIO_Init(TS_X1_PORT, &GPIO_InitStructure);

  /* X2 - ADC1 */
  GPIO_InitStructure.GPIO_Pin = TS_X2_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(TS_X2_PORT, &GPIO_InitStructure);

  /* ADC1 configuration (X2) */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1, ENABLE);
  ADC_CommonStructInit(&ADC_CommonInitStruct);
  ADC_CommonInit(&ADC_CommonInitStruct);
  ADC_InitStructure.ADC_Resolution = ADC_Resolution_10b;
  ADC_InitStructure.ADC_ScanConvMode = DISABLE;
  ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
  ADC_InitStructure.ADC_ExternalTrigConvEdge = ADC_ExternalTrigConvEdge_None;
  ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_T1_CC1;
  ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
  ADC_InitStructure.ADC_NbrOfConversion = 1;
  ADC_Init(ADC1, &ADC_InitStructure);

  /* ADC1 regular channel configuration */
  ADC_RegularChannelConfig(ADC1, TS_X2_CHANNEL, 1, ADC_SampleTime_56Cycles);

  /* Disable ADC1 DMA */
  ADC_DMACmd(ADC1, DISABLE);

  /* Enable ADC1 */
  ADC_Cmd(ADC1, ENABLE);

  /* Clear any pending interrupts */
  ADC_ClearITPendingBit(ADC1, ADC_IT_EOC);

  /* Enable ADC1 Interrupt */
  ADC_ITConfig(ADC1, ADC_IT_EOC, ENABLE);

  /* Allow ports to settle */
  for(volatile int x=0; x<1000; x++);

  /* Enable X1 interrupt on touch */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
  SYSCFG_EXTILineConfig(TS_X1_EXTI_PORT, TS_X1_EXTI_PIN);
  EXTI_InitStructure.EXTI_Line = TS_X1_EXTI_LINE;
  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
  EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
  EXTI_Init(&EXTI_InitStructure);

  /* Enable ADC interrupts */
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  NVIC_InitStructure.NVIC_IRQChannel = ADC_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);

  /* Enable TIM5 clocks */
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM5, ENABLE);

  RCC_GetClocksFreq(&RCC_Clocks);

  /* Init Timer5 */
  TIM_DeInit(TIM5);
  TIM_TimeBaseStructure.TIM_Period = 0xFFFFFFFF;
  TIM_TimeBaseStructure.TIM_Prescaler = 1;
  TIM_TimeBaseStructure.TIM_ClockDivision = TIM_CKD_DIV1;
  TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
  TIM_TimeBaseInit(TIM5, &TIM_TimeBaseStructure);

  /* TIM5 Timing Mode configuration: Channel1 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = ((RCC_Clocks.PCLK1_Frequency / 1)/1000000ul) * TS_SETUP_DLY;
  TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
  TIM_OC1Init(TIM5, &TIM_OCInitStructure);

  /* TIM Interrupts enable */
  TIM_ITConfig(TIM5, TIM_IT_CC1, ENABLE);

  /* NVIC TIM5 Interrupt enable */
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  NVIC_InitStructure.NVIC_IRQChannel = TIM5_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);

  TIM_SetCounter(TIM5, 0);

  /* TIM5 enable counter */
  TIM_Cmd(TIM5, ENABLE);
}
